--- a/content/post/2014-09-07-versions2.md
+++ b/content/post/2014-09-07-versions2.md
@@ -150,6 +150,6 @@ Updated Table of Tradeoffs:
 
 ![Updated Table of Tradeoffs][utable].
 
-[utable]: https://dl.dropboxusercontent.com/u/35111849/table.png
+[utable]: http://www.askasya.com/assets/table.png
 
 
